--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="chatbot-container">
-        <h1>Gemini チャットボット</h1>
+        <h1>Gemini Chatbot</h1>
         <div class="chat-history" id="chat-history">
             <div class="message bot-message">こんにちは！何か質問がありますか？</div>
         </div>
