--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <div class="chat-input-area">
             <input type="text" id="user-input" placeholder="メッセージを入力...">
             <button id="send-button">送信</button>
+            <button id="voice-toggle" title="音声ON/OFF">🔊</button>
+            <button id="stop-speech" title="音声停止">⏸️</button>
         </div>
     </div>
 
