--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
         </div>
         <div class="chat-input-area">
             <input type="text" id="user-input" placeholder="メッセージを入力...">
-            <button id="send-button">送信</button>
-            <button id="voice-toggle" title="音声ON/OFF">🔊</button>
-            <button id="stop-speech" title="音声停止">⏸️</button>
+            <div class="button-group">
+                <button id="send-button">送信</button>
+                <button id="voice-toggle" title="音声ON/OFF">🔊</button>
+                <button id="stop-speech" title="音声停止">⏸️</button>
+                <button id="voice-engine-toggle" title="音声エンジン切り替え">🎵</button>
+            </div>
         </div>
     </div>
 
