change chatbot name

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         
         <!-- チャットボットエリア -->
         <div class="chatbot-container">
-            <h1>Gemini Chatbot with Chloe</h1>
+            <h1>Gemini Chatbot with Natori</h1>
             <div class="chat-history" id="chat-history">
-                <div class="message bot-message">こんにちは！私はChloeです。何か質問がありますか？</div>
+                <div class="message bot-message">こんにちは！私はNatoriです。何か質問がありますか？</div>
             </div>
             <div class="chat-input-area">
                 <input type="text" id="user-input" placeholder="メッセージを入力...">
