--- a/admin/index.html
+++ b/admin/index.html
@@ -262,6 +262,25 @@
                         <div id="live2d-debug-result" class="test-result"></div>
                     </div>
 
+                    <!-- Live2D感情コントロール（NEW） -->
+                    <div class="debug-section">
+                        <h3>🎭 Live2D感情コントロール</h3>
+                        <div class="emotion-control-panel">
+                            <div class="emotion-buttons">
+                                <button id="set-expression-smile" class="emotion-btn smile" title="笑顔">😊 笑顔</button>
+                                <button id="set-expression-surprised" class="emotion-btn surprised" title="驚き">😮 驚き</button>
+                                <button id="set-expression-sad" class="emotion-btn sad" title="悲しみ">😢 悲しみ</button>
+                                <button id="set-expression-angry" class="emotion-btn angry" title="怒り">😠 怒り</button>
+                                <button id="set-expression-normal" class="emotion-btn normal" title="通常">😐 通常</button>
+                            </div>
+                            <div class="emotion-status">
+                                <span class="status-label">現在の表情:</span>
+                                <span id="current-expression-display" class="current-expression">通常</span>
+                            </div>
+                        </div>
+                        <div id="emotion-control-result" class="test-result"></div>
+                    </div>
+
                     <!-- システム統合テスト -->
                     <div class="debug-section">
                         <h3>🔄 システム統合テスト</h3>
